test/libsolidity/syntaxTests/nameAndTypeResolution/144_no_spurious_identifier_suggestions.sol
contract c {
    function g() public {
        uint va = 1;
        uint vb = x;
     }
}
// ----
// DeclarationError: (78-79): Undeclared identifier.
